<resources>
    <string name="app_name">Fiscaluno</string>
    <string name="title_activity_rating">Rating</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_institution">Search the Institution</string>
    <string name="institutions">Institutions</string>
    <string name="course">Course</string>
    <string name="course_name">Course Name</string>
    <string name="type">Type</string>
    <string name="Anual">Annually</string>
    <string name="semiannually">semiannually</string>
    <string name="continueTxt">Continue</string>
    <string name="rate_it">Rate it</string>
    <string name="add">Add</string>
    <string name="suggestions">Suggestions</string>
    <string name="cons">Cons</string>
    <string name="pros">Pros</string>
    <string name="review_title">Review Title</string>
    <string name="reviews">Reviews</string>
    <string name="students_satisfaction">Students\' Satisfaction</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="top_rated">Top Rated</string>
    <string name="rated_by">Rated By:</string>
    <string name="your_rating">Rating</string>
    <string name="average">Average</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">1538793826188514</string>
    <string name="fb_login_protocol_scheme">fb1538793826188514</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="not_registered_register">Not registered yet?\nSign in</string>
    <string name="must_select_institution">An course must be selected</string>
    <string name="courses">Courses</string>
    <string name="exams">Exams</string>
    <string name="search">Search</string>
    <string name="ideal_institution_by_you">The ideal educational course, rated by students like you</string>
    <string name="top_rated_institutions">Top rated institutions</string>
    <string name="top_rated_courses">Top rated courses</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="results_for">Results for</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_it">Review It</string>
    <string name="course_type">Course Type</string>
    <string name="details">Details</string>
    <string name="overall_satisfaction">Overall satisfaction</string>
    <string name="recommend_to_friend">Would recommend to a friend?</string>
    <string name="start_year">Start year</string>
    <string name="average_paid_value">Average paid value</string>
    <string name="bachelor">Bachelor</string>
    <string name="technician">Technician</string>
    <string name="course_period">Course Period</string>
    <string name="diurnal">Diurnal</string>
    <string name="nightly">Nightly</string>
    <string name="fulltime">Full-time</string>
    <string name="detailed_review_call">Rate the following aspects of your institution!</string>
    <string name="average_time_to_graduate">Average time to graduate</string>
    <string name="average_detailed_reviews">Average Detailed Reviews</string>
    <string name="login_to_view">Log in to see more</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="login">Login</string>

</resources>
