<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fiscaluno.view.RatingCourseInfoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:weightSum="10"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/institution_small_image_ci"
                android:layout_width="45dp"
                android:layout_height="45dp" />
            <TextView
                android:gravity="center"
                android:layout_weight="8.5"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/institution_name_tv_ci"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <FrameLayout
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cardview_dark_background"/>


        <LinearLayout
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:hint="@string/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/course_et_ci"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:text="@string/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

        <RadioGroup
            android:id="@+id/type_group_ci"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/Anual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/semiannually"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/year_or_semester_tv"
            android:text="Ano de Inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/start_year_et_ci"
            android:inputType="number"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/value_tv"
            android:text="Valor Mensal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/payed_value_et_ci"
            android:inputType="number"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/continueTxt"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/continue_btn_ci"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
