<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/courseCard"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/rateableEntityIv"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="115dp"
                android:layout_height="115dp"
                fresco:placeholderImage="@mipmap/ic_launcher" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rateableEntityNameTv"
                    android:text="Sistemas de Informação"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/subRareableEntityNameTv"
                    android:textSize="12sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/your_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RatingBar
                        android:id="@+id/courseRating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="5"
                        android:stepSize="1"
                        android:isIndicator="true"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:weightSum="10"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rated_by"/>
                        <TextView
                            android:id="@+id/ratedBy"
                            android:text="5.0"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <TextView
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/average"/>
                        <TextView
                            android:id="@+id/average"
                            android:text="5.0"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>